--- a/src/views/auth/cadastro.ejs
+++ b/src/views/auth/cadastro.ejs
@@ -9,7 +9,7 @@
     <div class="cadastro">
       <div class="div">
         <div class="overlap">
-          <img class="logo-neuma" src="imagens/logo neuma 2025 transparente.png" />
+          <img class="logo-neuma" src="/public/imagens/logo neuma 2025 transparente.png" />
           <div class="text-wrapper">Bem-vindo(a)!</div>
         </div>
         <div class="overlap-group">
