--- a/src/views/auth/login.html
+++ b/src/views/auth/login.html
@@ -185,13 +185,13 @@
         <div class="left-panel">
             <p class="welcome-text">Bem-vindo(a) novamente!</p>
             <div class="logo-container">
-                <img src="logo neuma 2025 transparente.png" alt="Logo Neuma" class="logo-image">
+                <img src="/imagens/logo neuma 2025 transparente.png" alt="Logo Neuma" class="logo-image">
             </div>
         </div>
         <div class="right-panel">
             <h2 class="form-title">
                 Login 
-                <img src="gato_neuma.png" alt="Ícone Login" class="form-icon">
+                <img src="/imagens/gato_neuma.png" alt="Ícone Login" class="form-icon">
             </h2>
             <form id="loginForm">
                 <div class="form-group">
