--- a/src/views/teste/questionario.html
+++ b/src/views/teste/questionario.html
@@ -187,7 +187,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="logo neuma 2025 transparente.png" alt="Logo Neuma 2025" class="logo">
+            <img src="/imagens/logo neuma 2025 transparente.png" alt="Logo Neuma 2025" class="logo">
             <h1>Teste VARK</h1>
             <p>Descubra o seu estilo de aprendizagem!</p>
         </div>
