--- a/src/views/home/home1.html
+++ b/src/views/home/home1.html
@@ -320,7 +320,7 @@
 <body>
     
     <div class="header">
-        <img src="/imagens/logo neuma 2025 transparente.png" alt="Logo Neuma" class="logo">
+        <img src="/public/imagens/logo neuma 2025 transparente.png" alt="Logo Neuma" class="logo">
     </div>
     <div class="main1"></div>
 
@@ -448,7 +448,7 @@ Saber como você aprende melhor pode tornar as aulas de Matemática mais fáceis
 <br><strong>E-mail: </strong>projetoneuma@gmail.com</p>
     </div>
 
-    <img src="/imagens/logo neuma 2025 transparente.png" alt="Logo" height="170" style="object-fit: contain;">
+    <img src="/public/imagens/logo neuma 2025 transparente.png" alt="Logo" height="170" style="object-fit: contain;">
 
     <div style="margin-top: 10px;">
       <h2><strong>Desenvolvedoras:</strong></h2>
