--- a/src/views/teste/resultado.html
+++ b/src/views/teste/resultado.html
@@ -276,7 +276,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="/imagens/logo neuma 2025 transparente.png" alt="Logo Neuma 2025" class="logo">
+            <img src="/public/imagens/logo neuma 2025 transparente.png" alt="Logo Neuma 2025" class="logo">
             <h1>Resultado do Teste VARK</h1>
             <p>Seu estilo de aprendizagem foi identificado!</p>
         </div>
