--- a/src/views/auth/cadastro.html
+++ b/src/views/auth/cadastro.html
@@ -193,7 +193,7 @@
         <div class="right-panel">
             <h2 class="form-title">
                 Cadastro 
-                <img src="/imagens/gato_neuma.png" alt="Ícone Cadastro" class="form-icon">
+                <img src="/public/imagens/gato_neuma.png" alt="Ícone Cadastro" class="form-icon">
             </h2>
             <form id="cadastroForm">
                 <div class="form-group">
@@ -224,7 +224,7 @@
 
         <div class="left-panel">
             <div class="logo-container">
-                <img src="/imagens/logo neuma 2025 transparente.png" alt="Logo Neuma" class="logo-image">
+                <img src="/public/imagens/logo neuma 2025 transparente.png" alt="Logo Neuma" class="logo-image">
             </div>
         </div>
     </div>
