--- a/src/views/home/home1.html
+++ b/src/views/home/home1.html
@@ -332,7 +332,7 @@ Saber como você aprende melhor pode tornar as aulas de Matemática mais fáceis
         <br> <strong>Clique no botão abaixo e descubra seu jeito de aprender!</strong>
     </p>
 
-    <a href=" " class="btn">Realizar o Teste VARK</a>
+    <a href="/questionario" class="btn">Realizar o Teste VARK</a>
   </section>
 
   <div style="
