--- a/src/views/teste/questionario.html
+++ b/src/views/teste/questionario.html
@@ -197,7 +197,7 @@
                 <div class="progress-fill" id="progressBar"></div>
             </div>
 
-            <form id="varkForm">
+                <form id="varkForm" action="/resultado" method="get">
 
                 <div class="question-container">
                     <div class="question-title">1. Quando você precisa aprender a usar um novo aplicativo, você prefere:</div>
@@ -432,6 +432,6 @@
         </div>
     </div>
 
-    <script src="teste.js"></script>
+    <script src="/public/js/teste.js"></script>
 </body>
 </html>
