--- a/src/views/teste/resultado.html
+++ b/src/views/teste/resultado.html
@@ -286,7 +286,7 @@
         </div>
     </div>
 
-    <script src="teste.js"></script>
+    <script src="/public/js/teste.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             displayResults();
